--- a/site/components/fileupdate.html
+++ b/site/components/fileupdate.html
@@ -1,6 +1,6 @@
 <div class="input-group mb-3">
     <span class="col-md-1 text-end me-2" for="id">{{ label }}</span>
-    <img ng-hide="newimage" ng-src=".{{path}}" width="200" alt="" class="img-responsive img-rounded">
+    <img ng-hide="newimage" src="{{path}}" width="200" alt="" class="img-responsive img-rounded">
     <!-- <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ oldname }}&nbsp;&nbsp;&nbsp;&nbsp;</p> -->
     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault-{{index}}"
         ng-hide="newimage" ng-model="ischange" ng-checked="ischange" ng-disabled="disabled">
