--- a/site/components/fileupdate.html
+++ b/site/components/fileupdate.html
@@ -2,9 +2,10 @@
     <span class="col-md-1 text-end me-2" for="id">{{ label }}</span>
     <img ng-hide="newimage" src="{{path}}" width="200" alt="" class="img-responsive img-rounded">
     <!-- <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ oldname }}&nbsp;&nbsp;&nbsp;&nbsp;</p> -->
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault-{{index}}"
-        ng-hide="newimage" ng-model="ischange" ng-checked="ischange" ng-disabled="disabled">
+    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault-{{index}}" ng-hide="newimage"
+        ng-model="ischange" ng-checked="ischange" ng-disabled="disabled">
     <span ng-hide="newimage">Change&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <input name="id" id="id" type="file" accept="image/png, image/gif, image/jpeg" fileread="data" required="required" ng-disabled="(!ischange) || disabled" />
+    <input name="id" id="id" type="file" accept="image/png, image/gif, image/jpeg" fileread="data" ng-required="required"
+        ng-disabled="(!ischange) || disabled" />
     <img src="{{data.data}}" width="200" alt="" class="img-responsive img-rounded">
 </div>
