--- a/site/components/fileupdate.html
+++ b/site/components/fileupdate.html
@@ -4,7 +4,7 @@
     <!-- <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ oldname }}&nbsp;&nbsp;&nbsp;&nbsp;</p> -->
     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault-{{index}}" ng-hide="newimage"
         ng-model="ischange" ng-checked="ischange" ng-disabled="disabled">
-    <span ng-hide="newimage">Change&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span ng-hide="newimage">&nbsp;&nbsp;Change&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <input name="id" id="id" type="file" accept="image/png, image/gif, image/jpeg" fileread="data" ng-required="required"
         ng-disabled="(!ischange) || disabled" />
     <img src="{{data.data}}" width="200" alt="" class="img-responsive img-rounded">
