--- a/site/components/fileupdate.html
+++ b/site/components/fileupdate.html
@@ -1,11 +1,16 @@
 <div class="input-group mb-3">
     <span class="col-md-1 text-end me-2" for="id">{{ label }}</span>
-    <img ng-hide="newimage" src="{{path}}" width="200" alt="" class="img-responsive img-rounded">
+    <img ng-hide="newimage || path.includes('.mp4')" src="{{path}}" width="200" alt=""
+        class="img-responsive img-rounded">
+    <video ng-hide="newimage || !path.includes('.mp4')" src="{{path}}" width="200" alt=""
+        class="img-responsive img-rounded" loop=1 autoplay muted></video>
     <!-- <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ oldname }}&nbsp;&nbsp;&nbsp;&nbsp;</p> -->
     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault-{{index}}" ng-hide="newimage"
         ng-model="ischange" ng-checked="ischange" ng-disabled="disabled">
     <span ng-hide="newimage">&nbsp;&nbsp;Change&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <input name="id" id="id" type="file" accept="image/png, image/gif, image/jpeg" fileread="data" ng-required="required"
-        ng-disabled="(!ischange) || disabled" />
-    <img src="{{data.data}}" width="200" alt="" class="img-responsive img-rounded">
+    <input name="id" id="id" type="file" accept="image/png, image/gif, image/jpeg, video/mp4" fileread="data"
+        ng-required="required" ng-disabled="(!ischange) || disabled" />
+    <img ng-hide="data.data.includes('.mp4')" src="{{data.data}}" width="200" alt="" class="img-responsive img-rounded">
+    <video ng-hide="!data.data.includes('.mp4')" src="{{path}}" width="200" alt="" class="img-responsive img-rounded"
+        loop=1 autoplay muted></video>
 </div>
